2003-08-05  Not Zed  <NotZed@Ximian.com>

	** See bug #42636.
	
	* vfoldertypes.xml: Fix some of the subject rules, they were
	missing matching ')'s.

2003-08-01  Not Zed  <NotZed@Ximian.com>

	** See bug #47208.

	* filter-code.c (build_code): wrap the expression in a match-all
	so boolean expressions work properly for folder searches.

2003-07-23  Dan Winship  <danw@ximian.com>

	* Makefile.am: Use EVO_MARSHAL_RULE

2003-06-13  Larry Ewing  <lewing@ximian.com>

	* filter-source.c (filter_source_finalize): free current_url.

2003-06-11  Mike Kestner  <mkestner@ximian.com>

	* rule-context.c (load): stat the user file before parsing.

2003-06-06  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes some leaks from bug #43883.

	* filter-file.c (xml_decode): Free file->path and set it to
	NULL before entering the loop to decode it. This way if the value
	is already set we don't leak it. Set file->path = g_strdup (str ?
	str : ""); and then xmlFree the str.

2003-05-21  Jeffrey Stedfast  <fejj@ximian.com>

	* filter-source.c (filter_source_get_sources): Same as below.

	* filter-label.c (xml_create): Unref the gconf client when we're
	finished with it.