@@ -1,3 +1,12 @@
+2003-08-18  Ettore Perazzoli  <ettore@ximian.com>
+
+	* vfolder-rule.c (source_add): As a temporary measure, don't call
+	evolution_shell_client_user_select_folder() since this is not done
+	by the shell anymore.
+
+	* filter-folder.c (get_widget): Return NULL for now, since we
+	can't get the folder selector button from the shell anymore.
+
 2003-08-05  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #42636.
